--- a/ePubReader/ePubReader/ePubReader.csproj
+++ b/ePubReader/ePubReader/ePubReader.csproj
@@ -11,8 +11,8 @@
     <AssemblyName>ePubReader</AssemblyName>
     <DefaultLanguage>en-US</DefaultLanguage>
     <TargetPlatformIdentifier>UAP</TargetPlatformIdentifier>
-    <TargetPlatformVersion>10.0.10586.0</TargetPlatformVersion>
-    <TargetPlatformMinVersion>10.0.10240.0</TargetPlatformMinVersion>
+    <TargetPlatformVersion>10.0.14388.0</TargetPlatformVersion>
+    <TargetPlatformMinVersion>10.0.10586.0</TargetPlatformMinVersion>
     <MinimumVisualStudioVersion>14</MinimumVisualStudioVersion>
     <EnableDotNetNativeCompatibleProfile>true</EnableDotNetNativeCompatibleProfile>
     <FileAlignment>512</FileAlignment>
@@ -99,6 +99,10 @@
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
     <Compile Include="Controllers\ImportController.cs" />
+    <Compile Include="Controls\EPubItemContainer.xaml.cs">
+      <DependentUpon>EPubItemContainer.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Controls\EPubItemsControl.cs" />
     <Compile Include="Converters\RasToImageSourceConverter.cs" />
     <Compile Include="Models\ePub.cs" />
     <Compile Include="Models\ManifestItem.cs" />
@@ -146,6 +150,10 @@
     </ApplicationDefinition>
   </ItemGroup>
   <ItemGroup>
+    <Page Include="Controls\EPubItemContainer.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Styles\Custom.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -168,9 +176,7 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Controls\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <ProjectReference Include="..\..\..\..\GitHub\CompositionProToolkit\CompositionProToolkit\CompositionProToolkit.csproj">
       <Project>{9300e54c-338c-4ad7-baac-bcbd32a660cf}</Project>
