--- a/ePubReader/ePubReader/project.json
+++ b/ePubReader/ePubReader/project.json
@@ -1,5 +1,6 @@
 ﻿{
   "dependencies": {
+    "CompositionProToolkit": "0.3.0",
     "Microsoft.NETCore.UniversalWindowsPlatform": "5.2.2",
     "Microsoft.Xaml.Behaviors.Uwp.Managed": "1.1.0",
     "MyToolkit": "2.5.12",
