Fix right-clicking. Add BaseNotify.

--- a/ePubReader/ePubReader/ePubReader.csproj
+++ b/ePubReader/ePubReader/ePubReader.csproj
@@ -104,6 +104,7 @@
     </Compile>
     <Compile Include="Controls\EPubItemsControl.cs" />
     <Compile Include="Converters\RasToImageSourceConverter.cs" />
+    <Compile Include="Models\BaseNotify.cs" />
     <Compile Include="Models\ePub.cs" />
     <Compile Include="Models\ManifestItem.cs" />
     <Compile Include="Models\Metadata.cs" />
